--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ h1 {
   -webkit-text-fill-color: transparent;
 }
 span {
+  padding-left: 5px;
   background: linear-gradient(to left, rgb(112, 101, 214), rgb(230, 106, 213));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -52,7 +53,8 @@ body {
   width: 100%;
   height: 100%;
   color: #595fbe;
-  padding-top: 20px;
+  padding-top: 10px;
+  padding-left: 5px;
   border: none;
   outline: none;
 }
