--- a/style.css
+++ b/style.css
@@ -49,6 +49,15 @@ body {
   overflow: hidden;
 }
 
+
+input::-moz-selection {
+  background: rgba(210, 41, 132, 0.6);
+}
+
+input::selection {
+  background: rgba(210, 41, 132, 0.6);
+}
+
 .form input {
   font-size: 18px;
   width: 100%;
