--- a/style.css
+++ b/style.css
@@ -6,23 +6,26 @@
 
 h1 {
   font-size: 4rem;
-  background: linear-gradient(to left, rgb(112, 101, 214), rgb(230, 106, 213));
+  background: -webkit-gradient(linear, right top, left top, from(#7065d6), to(#e66ad5));
+  background: linear-gradient(to left, #7065d6, #e66ad5);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
 span {
   padding-left: 5px;
-  background: linear-gradient(to left, rgb(112, 101, 214), rgb(230, 106, 213));
+  background: -webkit-gradient(linear, right top, left top, from(#7065d6), to(#e66ad5));
+  background: linear-gradient(to left, #7065d6, #e66ad5);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
 h1::-moz-selection {
-  background: rgba(210, 41, 132, 0.6);
+  background: rgba(97, 255, 113, 0.4);
 }
 
 h1::selection {
-  background: rgba(210, 41, 132, 0.6);
+  background: rgba(97, 255, 113, 0.4);
 }
 
 body {
@@ -49,13 +52,12 @@ body {
   overflow: hidden;
 }
 
-
 input::-moz-selection {
-  background: rgba(210, 41, 132, 0.6);
+  background: rgba(97, 255, 113, 0.4);
 }
 
 input::selection {
-  background: rgba(210, 41, 132, 0.6);
+  background: rgba(97, 255, 113, 0.4);
 }
 
 .form input {
@@ -86,7 +88,7 @@ input::selection {
   bottom: -1px;
   width: 100%;
   height: 100%;
-  border-bottom: 3px solid  rgb(112, 101, 214);
+  border-bottom: 3px solid #7065d6;
   -webkit-transform: translateX(-100%);
           transform: translateX(-100%);
   -webkit-transition: -webkit-transform .3s ease;
